@@ -1,6 +1,6 @@
 Date: 2023-08-09
 Package: CHNOSZ
-Version: 2.0.0-18
+Version: 2.0.0-19
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
